[gd_scene load_steps=4 format=3 uid="uid://61j5pjiyh3vp"]

[ext_resource type="Texture2D" uid="uid://d2ccfbljcy8im" path="res://graphics/player/player.png" id="1_dovo2"]
[ext_resource type="Script" uid="uid://cclxwru0uusma" path="res://scenes/player/player.gd" id="1_gmlin"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8afob"]
radius = 66.0076

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gmlin")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(0, -37)
texture = ExtResource("1_dovo2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8afob")

[node name="TimerLaser" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerGrenade" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(19, -132)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(28, -130)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(11, -130)

[node name="GrenadeStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(68, -8)

[node name="Marker2D2" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(49, -32)

[node name="Marker2D3" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(59, -22)

[connection signal="timeout" from="TimerLaser" to="." method="_on_timer_timeout_laser"]
[connection signal="timeout" from="TimerGrenade" to="." method="_on_timer_grenade_timeout"]
